[gd_scene load_steps=10 format=1]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://tombe.png" type="Texture" id=2]
[ext_resource path="res://ubuntu_test.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Joueur_euse.tscn" type="PackedScene" id=4]
[ext_resource path="res://Joueur_euse_Enfant.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bullogue.tscn" type="PackedScene" id=6]
[ext_resource path="res://cactus_intro.png" type="Texture" id=7]
[ext_resource path="res://Appuyez_sur_Entree.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]

resource/name = "grandir"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Tombe:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="GameOver" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Tombe" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -36.0
margin/top = -48.0
margin/right = 40.0
margin/bottom = -34.0
custom_fonts/font = ExtResource( 3 )
text = "GAME OVER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Joueur_euse" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 0, 24 )

[node name="Joueur_euse_Enfant" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 0, 24 )

[node name="Bullogue" parent="." instance=ExtResource( 6 )]

visibility/visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/grandir = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Cactus" type="Sprite" parent="."]

transform/pos = Vector2( 140, -226 )
texture = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 2, 2 )

[node name="Appuyez_sur_Entree" parent="CanvasLayer" instance=ExtResource( 8 )]

visibility/visible = false
margin/left = 32.0
margin/top = 249.0
margin/right = 368.0
margin/bottom = 263.0


